pkg/tests/ossm-federation/testdata/failover/west-mesh/authorizationpolicy-direct-to-direct.yaml
# AuthorizationPolicy resources that apply when ingress gateway is using
# AUTO_PASSTHROUGH.  In these cases, the gateway does not authenticate, so
# the policy cannot match against principals.  Note, if proxying on the import
# side, the egress gateway's principal should be used instead of the workload's.

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: mongodb-authz
  namespace: west-mesh-bookinfo
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: mongodb
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/east-mesh-bookinfo/sa/bookinfo-ratings-v2
      to:
        - operation:
            ports:
              - '27017'
      when:
        - key: connection.sni
          values:
            - '*.mongodb.west-mesh-exports.svc.cluster.local'

---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ratings-authz
  namespace: west-mesh-bookinfo
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: ratings
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/east-mesh-bookinfo/sa/bookinfo-reviews-v2
      to:
        - operation:
            hosts:
              - '*.ratings.west-mesh-bookinfo.svc.local'
            ports:
              - '9080'
