pkg/tests/ossm-federation/testdata/failover/west-mesh/authorizationpolicy-direct-to-proxied.yaml
# Copyright 2024 Red Hat, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#	http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# These work when using aliased services.  In these cases, the gateway
# performs authentication, so principals can be checked.  Note, if using
# passthrough on the import side, the principals should match the client
# workloads, e.g. cluster.local/ns/east-mesh-bookinfo/sa/bookinfo-ratings-v2 for
# mongodb-aliased.

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: aliased-authz
  namespace: west-mesh-exports
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/east-mesh-bookinfo/sa/bookinfo-ratings-v2
      to:
        - operation:
            ports:
              - "27017"
      when:
        - key: connection.sni
          values:
            - "*.mongodb.bookinfo.svc.east-mesh.local"
    - from:
        - source:
            principals:
              - cluster.local/ns/east-mesh-bookinfo/sa/bookinfo-reviews-v2
      to:
        - operation:
            ports:
              - "9080"
      when:
        - key: connection.sni
          values:
            - "*.ratings.bookinfo.svc.east-mesh.local"
