pkg/tests/ossm-federation/testdata/failover/west-mesh/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: east-mesh-ca-root-cert
  namespace: west-mesh-system
data:
  root-cert.pem: {{ .CARootCert | toYaml | indent 2 }}
