pkg/tests/ossm-federation/testdata/failover/west-mesh/exportedserviceset.yaml
# Copyright 2024 Red Hat, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#	http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: federation.maistra.io/v1
kind: ExportedServiceSet
metadata:
  name: east-mesh
  namespace: west-mesh-system
spec:
  exportRules:
  - type: NameSelector
    nameSelector:
      namespace: bookinfo-ha
      name: ratings
      alias:
        namespace: bookinfo
        name: ratings
